Fixed right alignment of create-topic link.

--- a/src/main/resources/scss/forums/components/_forums.scss
+++ b/src/main/resources/scss/forums/components/_forums.scss
@@ -70,7 +70,7 @@ $indent: 0.9375rem;
 			display: block;
 			text-align: right;
 			padding: 0.5rem 0;
-			padding-right: 1rem;
+			padding-right: 0;
 		}
 	}
 
